first lines.

Changes between version 1.0.7 and 1.0.8

Support for numeric colours added, for 256-colour terminals (thanks to Gautam
Iyer).  Diff-types can now be specified explicitly, for use when diff-type
detection doesn't work or isn't possible.  Return diff's exit code, patch from
Tim Connors.  Allow extraneous diff text to be coloured separately.

Changes between version 1.0.8 and 1.0.9

Fix for http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=513313 incorporated

Changes between version 1.0.9 and 1.0.10

Fix for http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=459763 incorporated,
thanks to Gergely Nagy for contributed code.

Changes between version 1.0.10 and 1.0.11

Support for xz in cdiff, patch by Ville Skyttä; code cleanup from Akim Demaille;
patch to provide custom diff command from Rainer Nagel.  Improved wdiff support
inspired by patch from Peter van Dijk.  Improved debdiff detection.

Changes between version 1.0.11 and 1.0.12

Packaging refactoring and minor packaging fixes.

Changes between version 1.0.12 and 1.0.13

Avoid accidentally identifying some diffs as side-by-side, handling colordiff
arguments better.  Plus code refactoring, corrections to docs.

Changes between version 1.0.13 and 1.0.14

Big improvements to side-by-side diff detection, thanks Peter Wu.  Additional
colordiffrc example colour scheme file to match 'git diff'.  Misc fixes thanks
to John Szakmeister, Matthew Wang.

Changes between 1.0.14 and 1.0.15

Missed gitdiff file from tarball, bumping version number for clarity.

Changes between 1.0.15 and 1.0.16

Support for XDG_CONFIG_HOME (thanks Zhiming Wang), fewer deps for cdiff.sh and
fixes for diffy and diff-type specification (thanks Peter Wu).

Changes between 1.0.16 and 1.0.17

Ensure --color=no is honoured where appropriate, add --color-term-output-only
plus minor fixes.

Changes between 1.0.17 and 1.0.18

Fix regression which broke piping to less.

# vim: tw=72
