@@ -59,6 +59,7 @@ my $plain_text = $colour{white};
 my $file_old   = $colour{red};
 my $file_new   = $colour{blue};
 my $diff_stuff = $colour{magenta};
+my $diff_file  = $diff_stuff;
 my $cvs_stuff  = $colour{green};
 
 # Locations for personal and system-wide colour configurations
@@ -257,6 +258,9 @@ foreach $config_file (@config_files) {
             elsif ($setting eq 'diffstuff') {
                 $diff_stuff = $colourval;
             }
+            elsif ($setting eq 'difffile') {
+                $diff_file = $colourval;
+            }
             elsif ($setting eq 'cvsstuff') {
                 $cvs_stuff = $colourval;
             }
@@ -286,6 +290,7 @@ if ( (!$color_patch && (defined $color_patch || -f STDOUT)) ||
     $plain_text  = '';
     $file_old    = '';
     $file_new    = '';
+    $diff_file   = '';
     $diff_stuff  = '';
     $cvs_stuff   = '';
     $plain_text  = '';
@@ -462,7 +467,7 @@ while (defined( $_ = @inputstream ? shift @inputstream : ($lastline and <$inputh
             print "$cvs_stuff";
         }
         elsif (/^Only in/) {
-            print "$diff_stuff";
+            print "$diff_file";
         }
         else {
             print "$plain_text";
@@ -476,20 +481,20 @@ while (defined( $_ = @inputstream ? shift @inputstream : ($lastline and <$inputh
             print "$file_new";
         }
         elsif (/^\*{4,}/) {
-            print "$diff_stuff";
+            print "$diff_file";
         }
         elsif (/^Only in/) {
-            print "$diff_stuff";
+            print "$diff_file";
         }
         elsif (/^\*\*\* [0-9]+,[0-9]+/) {
-            print "$diff_stuff";
+            print "$diff_file";
             $inside_file_old = 1;
         }
         elsif (/^\*\*\* /) {
             print "$file_old";
         }
         elsif (/^--- [0-9]+,[0-9]+/) {
-            print "$diff_stuff";
+            print "$diff_file";
             $inside_file_old = 0;
         }
         elsif (/^--- /) {
@@ -511,7 +516,10 @@ while (defined( $_ = @inputstream ? shift @inputstream : ($lastline and <$inputh
         }
     }
     elsif ($diff_type eq 'diffu') {
-        if (/^-/) {
+        if (/^(---|\+\+\+) /) {
+            print "$diff_file";
+        }
+        elsif (/^-/) {
             print "$file_old";
         }
         elsif (/^\+/) {
@@ -521,7 +529,7 @@ while (defined( $_ = @inputstream ? shift @inputstream : ($lastline and <$inputh
             print "$diff_stuff";
         }
         elsif (/^Only in/) {
-            print "$diff_stuff";
+            print "$diff_file";
         }
         elsif (/^(Index: |={4,}|RCS file: |retrieving |diff )/) {
             print "$cvs_stuff";
@@ -550,7 +558,7 @@ while (defined( $_ = @inputstream ? shift @inputstream : ($lastline and <$inputh
             }
         }
         elsif (/^Only in/) {
-            print "$diff_stuff";
+            print "$diff_file";
         }
         else {
             print "$plain_text";
