@@ -27,3 +27,4 @@ newtext=darkgreen
 oldtext=darkred
 diffstuff=darkcyan
 cvsstuff=cyan
+difffile=white
